cmake_minimum_required(VERSION 3.10)

project(SweetPotato)



#if($(var) STREQUAL "ON")

#else()
#SET(CMAKE_CXX_STANDARD 11)
#SET(CMAKE_C_COMPILER c++)
#endif()

#include_directories(PROC_ALARM/include)
#include_directories(PROC_IOT/include)
ADD_SUBDIRECTORY(SP_ClientTest)




#ADD_SUBDIRECTORY(PROC_AAWANT)


